<resources>
    <string name="app_name">Yamba</string>
    <string name="titleStatus">Main Page</string>
    <string name="hintText">What\'s new with you?</string>
    <string name="buttonTextShare">Share</string>
    <string name="buttonTextClear">Cancel</string>
    <string name="titlePrefActivity">titlePrefActivity</string>
    <string name="titleUsername">Username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryUsername">Type your username here.</string>
    <string name="summaryPassword">Enter your password here.</string>
    <string name="titlePref">Setting</string>
    <string name="buttonMenu">Menu</string>
    <string name="titleMiscActivity">titleMisc</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonLogOut">Log Out</string>
    <string name="titleTimeline">Timeline</string>
    <string name="msgSetupPrefs">Please enter your username and password. </string>
    <string name="buttonPost">+</string>
    <string name="titleService">Pull New Messages</string>
    <string name="summaryService">Pull Messages Automatically</string>
    <string name="receive_timeline_notifications_permission_label">Permission: Receive timeline notifications</string>
    <string name="receive_timeline_notifications_permission_description">Receive timeline notifications</string>
    <string name="send_timeline_notifications_permission_label">Permission: Send timeline notifications</string>
    <string name="send_timeline_notifications_permission_description">Send timeline notifications</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="buttonCompass">Compass</string>
    <string name="titleLocationActivity">Where am I</string>
    <string name="labelLocationActivity">Location Activity</string>
    <string name="titleProvider">Provider of location</string>
    <string-array name="providers">
        <item>None</item>
        <item>GPS</item>
        <item>Mobile Network</item>
        <item>Combined</item>
    </string-array>
    <string-array name="providerValues">
        <item>NONE</item>
        <item>gps</item>
        <item>network</item>
        <item>fused</item>
    </string-array>
</resources>
