<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/titleStatus" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="top|center_horizontal"
        android:gravity="top|left"
        android:textSize="20dp"
        android:hint="@string/hintText"
        android:id="@+id/editTextMicroBlog"
        android:background="#CFFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:text="140"
        android:textSize="20dp"
        android:id="@+id/textViewTextCount"
        android:background="#CFFF"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextShare"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/buttonShare"
        android:background="#CFFF"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextClear"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/buttonClear"
        android:background="#CFFF"/>

</LinearLayout>