<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSettings"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="top|center_horizontal"
        android:id="@+id/buttonSettings"
        android:background="#FFFF"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogOut"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="top|center_horizontal"
        android:id="@+id/buttonLogOut"
        android:background="#FFFF"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCompass"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="top|center_horizontal"
        android:id="@+id/buttonCompass"
        android:background="#FFFF"/>
</LinearLayout>