<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#B000"
        android:gravity="center"
        android:text="@string/titleTimeline"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listTimeline"
        android:background="#B000"
        android:layout_weight="0.5">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="0.5">

        <Button
            android:id="@+id/buttonPost"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.25"
            android:background="#B000"
            android:gravity="center"
            android:text="@string/buttonPost"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonMenu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.25"
            android:background="#B000"
            android:gravity="center"
            android:text="@string/buttonMenu"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>
